# rust-lambda-container-example

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  cargo
src/: main.rs
