[package]
name = "rust-lambda-container-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5.1"
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["macros"] }
tracing = { version = "0.1.35", features = ["log"] }
tracing-subscriber = { version = "0.3.14", features = ["fmt"] }
